--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 baseurl:
 url: https://abbywitmia.github.io
 date_format: "ordinal"
-title: 码志
-subtitle: "公众号：闷骚的程序员"
-description: "Wit的个人博客，公众号：闷骚的程序员"
-keywords: 码志, Zhuang Ma, mzlogin, mazhuang, 闷骚的程序员
+title: "ΓΝΩΘΙ ΣΑΥΤΟΝ"
+subtitle: "Tempora mutantur, nos et mutamur in illis"
+description: "Wit的个人博客"
+keywords: Wit
 timezone: Asia/Shanghai
 encoding: "utf-8"
 side_bar_repo_limit: 5
