--- a/_config.yml
+++ b/_config.yml
@@ -138,10 +138,10 @@ gitment:
         client_secret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
 # https://github.com/gitalk/gitalk#install
 gitalk:
-    owner: mzlogin
-    repo: blog-comments
-    clientID: d2e1cbbd298958076462
-    clientSecret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
+    owner: abbywitmia
+    repo: abbywitmia.github.io
+    clientID: c4883c66a8a333022568
+    clientSecret: b936b7076f58e45e0001e5ca30998d1ac23fd37e
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
